--- a/.github/workflows/build_deploy.yaml
+++ b/.github/workflows/build_deploy.yaml
@@ -29,10 +29,10 @@ jobs:
 
       - name: Install dependencies
         run: |
-          install.packages(c('remotes', 'BiocManager'))
+          #install.packages(c('remotes'))
           local_deps <- remotes::local_package_deps(dependencies = TRUE)
-          deps <- remotes::dev_package_deps(dependencies = TRUE, repos = BiocManager::repositories())
-          BiocManager::install(local_deps[local_deps %in% deps$package[deps$diff != 0]], Ncpu = 2L)
+          #deps <- remotes::dev_package_deps(dependencies = TRUE, repos = BiocManager::repositories())
+          #BiocManager::install(local_deps[local_deps %in% deps$package[deps$diff != 0]], Ncpu = 2L)
         shell: Rscript {0}
 
       - name: Session info
