--- a/.github/workflows/build_deploy.yaml
+++ b/.github/workflows/build_deploy.yaml
@@ -20,7 +20,12 @@ jobs:
 
       - name: Set up pandoc
         uses: r-lib/actions/setup-r@v2
-
+      
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pandoc
+      
       - name: Install TinyTeX
         run: |
           install.packages('tinytex')
@@ -29,7 +34,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          install.packages(c('remotes', 'BiocManager'))
+          install.packages(c('remotes', 'BiocManager', 'rmarkdown'))
           local_deps <- remotes::local_package_deps(dependencies = TRUE)
           deps <- remotes::dev_package_deps(dependencies = TRUE, repos = BiocManager::repositories())
           BiocManager::install(local_deps[local_deps %in% deps$package[deps$diff != 0]], Ncpu = 2L)
