--- a/docs/_output.yml
+++ b/docs/_output.yml
@@ -5,7 +5,7 @@ bookdown::bs4_book:
     h4-font-size: "1.1rem"
     headings-color: "#87b13f"
   repo:
-    base: https://github.com/dcassol/wdl_rnaseq
+    base: https://github.com/dcassol/stem
     branch: main
     subdir: docs
     
