--- a/.github/workflows/build_deploy.yaml
+++ b/.github/workflows/build_deploy.yaml
@@ -7,8 +7,7 @@ name: build_deploy
 
 jobs:
   build_deploy:
-    runs-on: ubuntu-latest
-    container: rocker/r-ver:latest
+    runs-on: macOS-latest
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
