--- a/.github/workflows/build_deploy.yaml
+++ b/.github/workflows/build_deploy.yaml
@@ -21,10 +21,10 @@ jobs:
       - name: Set up pandoc
         uses: r-lib/actions/setup-r@v2
       
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y pandoc libcurl4-openssl-dev libssl-dev
+#      - name: Install dependencies
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install -y pandoc libcurl4-openssl-dev libssl-dev
       
       - name: Install TinyTeX
         run: |
@@ -56,10 +56,10 @@ jobs:
       
 
       # deploy needs rsync? Seems so.
-      - name: Install deploy dependencies
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: |
-          apt-get update && apt-get -y install rsync
+#      - name: Install deploy dependencies
+#        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+#        run: |
+#         apt-get update && apt-get -y install rsync
           
       - name: Deploy 🚀
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
